--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-<header>
-  <h1>MenShop</h1>
-</header>
+<h1>Каталог MenShop</h1>
+<div class="catalog" id="catalog"></div>
 
-<main id="products"></main>
-
-<script src="script.js"></script>
+<!-- Firebase + JS -->
+<script type="module" src="app.js"></script>
 </body>
 </html>
